# walmart-partner-api

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: feed.rs  inventory.rs  item.rs  main.rs  order.rs  report.rs
openapi/: Cargo.toml
openapi/src/: main.rs
src/: client.rs  error.rs  lib.rs  response.rs  sign.rs
src/cli/: main.rs  upload.rs
src/feed/: mod.rs  types.rs
src/inventory/: mod.rs  types.rs
src/order/: mod.rs  test_order.json  types.rs
walmart-partner-api/: Cargo.toml
walmart-partner-api/src/: client.rs  error.rs  lib.rs  response.rs  result.rs  sign.rs  utils.rs  xml.rs
walmart-partner-api/src/api/: mod.rs
walmart-partner-api/src/api/ca/: client.rs  feed.rs  mod.rs
walmart-partner-api/src/api/ca/feed/: mod.rs  types.rs
walmart-partner-api/src/api/ca/inventory/: mod.rs  types.rs
walmart-partner-api/src/api/ca/item/: mod.rs  types.rs
walmart-partner-api/src/api/ca/order/: mod.rs  test_get_all_orders_body.xml  types.rs
walmart-partner-api/src/api/ca/report/: mod.rs  types.rs
walmart-partner-api/src/api/us/: client.rs  mod.rs
walmart-partner-api/src/api/us/feed/: mod.rs  test_get_all_feed_statuses.xml  types.rs
walmart-partner-api/src/api/us/inventory/: mod.rs  types.rs
walmart-partner-api/src/api/us/item/: mod.rs
walmart-partner-api/src/api/us/order/: mod.rs  test_get_all_orders_body.xml  test_get_all_released_order_body.xml  types.rs
walmart-partner-api/src/api/us/report/: mod.rs  types.rs
walmart-partner-api/src/feed/: mod.rs  types.rs
walmart-partner-api/src/inventory/: mod.rs  types.rs
walmart-partner-api/src/item/: mod.rs  types.rs
walmart-partner-api/src/order/: mod.rs  test_order_list_res.json  types.rs
walmart-partner-api/src/report/: item.rs  mod.rs
walmart-partner-api/src/shared/: error.rs  feed.rs  inventory.rs  item.rs  mod.rs  order.rs
walmart-partner-api/src/shared/feed/: mod.rs  types.rs
walmart-partner-api/src/shared/inventory/: mod.rs  types.rs
walmart-partner-api/src/shared/item/: mod.rs
walmart-partner-api/src/shared/order/: mod.rs  types.rs
walmart-partner-api/src/shared/report/: item.rs  mod.rs
walmart-partner-api/src/test_util/: mod.rs
