[package]
name = "walmart_partner_api"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]

[dependencies]
reqwest = "0.7.2"
error-chain = "0.10.0"
base64 = "0.6.0"
chrono = "0.4"
untrusted = "0.5.0"
openssl = "0.9.15"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

[dev-dependencies]
dotenv = "0.10.1"