[package]
name = "walmart_partner_api"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]

[dependencies]
reqwest = "0.7.2"
error-chain = "0.10.0"
base64 = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
untrusted = "0.5.0"
openssl = "0.9.15"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
rand = "0.3.16"
serde_qs = "0.2.1"
multipart = { version = "0.13.1", features = ["hyper"] }
clap = { version = "2.26.0", optional = true }
dotenv = { version = "0.10.1", optional = true }

[[bin]]
name = "cli"
path = "src/cli/main.rs"
required-features = ["binaries"]

[features]
binaries = ["dotenv", "clap"]