[package]
name = "cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
walmart_partner_api = { path = "../walmart-partner-api" }
serde_json = "1.0.2"
anyhow = "1.0.66"
tokio = { version = "1.0", features = ["rt"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"