[package]
name = "walmart_partner_api"
version = "0.6.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
description = "Rust client for Walmart Partner APIs"
repository = "https://github.com/Ventmere/walmart-partner-api"
license = "MIT"
exclude = ["target"]
edition = "2018"

[dependencies]
url = "1.6.0"
reqwest = "0.9.0"
base64 = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
openssl = "0.10.0"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
rand = "0.3.16"
serde_urlencoded = "0.5.1"
zip = "0.3.1"
csv = "1.0.0-beta.5"
tempfile = "2"
bigdecimal = "0.1"
xmltree = "0.8.0"
failure = "0.1.2"
failure_derive = "0.1.2"
log = "0.4"